syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";
import "common/common.proto";

option go_package = "api/grpc/v1/contact;contact_grpc_service";

enum ContactFieldMask {
  CONTACT_FIELD_NONE = 0; // No property, ignored by the server
  CONTACT_FIELD_FIRST_NAME = 1;
  CONTACT_FIELD_LAST_NAME = 2;
  CONTACT_FIELD_NAME = 3;
  CONTACT_FIELD_PREFIX = 4;
  CONTACT_FIELD_DESCRIPTION = 5;
  CONTACT_FIELD_TIMEZONE = 6;
  CONTACT_FIELD_PROFILE_PHOTO_URL = 7;
}

message UpsertContactGrpcRequest {
  string id = 1;
  string tenant = 2;
  string firstName = 3;
  string lastName = 4;
  string name = 5;
  string prefix = 6;
  string appSource = 7 [deprecated = true];
  string source = 8 [deprecated = true];
  string sourceOfTruth = 9 [deprecated = true];
  google.protobuf.Timestamp  createdAt = 10;
  google.protobuf.Timestamp  updatedAt = 11;
  string description = 12;
  string timezone = 13;
  string profilePhotoUrl = 14;
  SourceFields sourceFields = 15;
  ExternalSystemFields externalSystemFields = 16;
  string loggedInUserId = 17;
  repeated ContactFieldMask fieldsMask = 18;
}

message LinkPhoneNumberToContactGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string phoneNumberId = 3;
  bool primary = 4;
  string label = 5;
  string loggedInUserId = 6;
  string appSource = 7;
}

message LinkEmailToContactGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string emailId = 3;
  bool primary = 4;
  string label = 5;
  string loggedInUserId = 6;
  string appSource = 7;
}

message LinkLocationToContactGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string locationId = 3;
  string loggedInUserId = 4;
  string appSource = 5;
}

message LinkWithOrganizationGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string organizationId = 3;
  string loggedInUserId = 4;
  SourceFields sourceFields = 5;
  google.protobuf.Timestamp  startedAt = 6;
  google.protobuf.Timestamp  endedAt = 7;
  string jobTitle = 8;
  bool primary = 9;
  string description = 10;
  google.protobuf.Timestamp  createdAt = 11;
  google.protobuf.Timestamp  updatedAt = 12;
  string appSource = 13;
}

message ContactAddSocialGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string loggedInUserId = 3;
  SourceFields sourceFields = 4;
  string url = 5;
  google.protobuf.Timestamp  createdAt = 6;
  google.protobuf.Timestamp  updatedAt = 7;
}

message ContactIdGrpcResponse {
  string id = 1;
}

service contactGrpcService {
  rpc UpsertContact(UpsertContactGrpcRequest) returns (ContactIdGrpcResponse);
  rpc LinkPhoneNumberToContact(LinkPhoneNumberToContactGrpcRequest) returns (ContactIdGrpcResponse);
  rpc LinkEmailToContact(LinkEmailToContactGrpcRequest) returns (ContactIdGrpcResponse);
  rpc LinkLocationToContact(LinkLocationToContactGrpcRequest) returns (ContactIdGrpcResponse);
  rpc LinkWithOrganization(LinkWithOrganizationGrpcRequest) returns (ContactIdGrpcResponse);
  rpc AddSocial(ContactAddSocialGrpcRequest) returns (IdResponse);
}
